fix footer link

--- a/privacy/index.html
+++ b/privacy/index.html
@@ -157,7 +157,7 @@
 
                 <div class="col-lg-6">
                     <div class="nav nav-bold nav-uppercase nav-trim justify-content-lg-center">
-                        <a class="nav-link" href="#">Blog</a>
+                        <a class="nav-link" href="/blog">Blog</a>
                         <a class="nav-link" href="/privacy">privacy</a>
                         <!-- <a class="nav-link" href="#">Contact</a> -->
                     </div>
