--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
   <!--  Open Graph Tags -->
   <meta property="og:title" content="Eilarc - Blockchain Solutions">
   <meta property="og:description" content="Transform your business with blockchain technology, we can help determine how blockchain can revolutionise  your business.">
-  <meta property="og:url" content="http://eilarc.io">
-  <meta property="og:image" content="http://localhost:8080/assets/img/og-image.jpg">
+  <meta property="og:url" content="https://eilarc.io">
+  <meta property="og:image" content="https://eilarc.io/assets/img/og-image.jpg">
   <meta name="twitter:card" content="summary_large_image">
 </head>
 
@@ -302,15 +302,15 @@
             <div class="form-row">
               <input type="hidden" name="_next" value="https://eilarc.io/#thankyou" />
               <div class="form-group col-md-6">
-                <input class="form-control form-control-lg" type="text" name="firstname" placeholder="First Name">
+                <input class="form-control form-control-lg" type="text" name="firstname" placeholder="First Name" required>
               </div>
 
               <div class="form-group col-md-6">
-                <input class="form-control form-control-lg" type="text" name="lastname" placeholder="Last Name">
+                <input class="form-control form-control-lg" type="text" name="lastname" placeholder="Last Name" required>
               </div>
 
               <div class="form-group col-md-6">
-                <input class="form-control form-control-lg" type="email" name="email" placeholder="Email">
+                <input class="form-control form-control-lg" type="email" name="email" placeholder="Email" required>
               </div>
 
               <div class="form-group col-md-6">
@@ -319,7 +319,7 @@
             </div>
 
             <div class="form-group">
-              <textarea class="form-control form-control-lg" rows="4" placeholder="What do you have in mind?" name="message"></textarea>
+              <textarea class="form-control form-control-lg" rows="4" placeholder="What do you have in mind?" name="message" required></textarea>
             </div>
 
             <button class="btn btn-lg btn-primary" type="submit">Send message</button>
