--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
               <i class="ti-exchange-vertical"></i>
             </p>
             <h5>Exchanges</h5>
-            <p>Whitelabeled and customizable decentralized cryptocurrency exchange solution. Our team has focused on security,
+            <p>Whitelabeled and customizable decentralized cryptocurrency exchange solution. Our team focuses on security,
               scalability and seamless connectivity.</p>
           </div>
 
