--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
               <i class="icon-wallet"></i>
             </p>
             <h5>Wallets</h5>
-            <p>Our mobile app developer experts are best at delivering secure and multi cryptocurrency wallets. Provide on the
+            <p>Our mobile app developer experts are best at delivering secure and multi cryptocurrency wallets that provide on the
               go access to your users on any device with web wallets and hardware wallet integration.
             </p>
           </div>
