--- a/index.html
+++ b/index.html
@@ -355,12 +355,12 @@
     <div class="modal fade" id="modal-thankyou" tabindex="-1" role="dialog">
         <div class="modal-dialog" role="document">
           <div class="modal-content">
-  
             <div class="modal-body">
               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
               </button>
               <div class="text-center">
+                <img width="200px" src="/assets/img/thankyou.png">
                 <h4>Thank You</h4>
                 <p>We will get in touch very soon.</p>
               </div>
