--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
           </div>
 
           <div class="col-md-3 text-center text-md-right">
-            <a class="btn btn-lg btn-round btn-light" href="#">Need Help?</a>
+            <a class="btn btn-lg btn-round btn-light" href="/#contact">Need Help?</a>
           </div>
         </div>
       </div>
