--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
       <section class="navbar-mobile">
         <nav class="nav nav-navbar ml-auto">
           <a class="nav-link" href="/">Home</a>
-          <a class="nav-link" href="/#services">Services</a>
-          <a class="nav-link" href="/#blockchain">Blockchain</a>
-          <a class="nav-link" href="/#cryptocurrency">Cryptocurrency</a>
+          <a class="nav-link" href="#services">Services</a>
+          <a class="nav-link" href="#blockchain">Blockchain</a>
+          <a class="nav-link" href="#cryptocurrency">Cryptocurrency</a>
           <a class="nav-link" href="/blog">Blog</a>
-          <a class="nav-link" href="/#contact">Contact</a>
+          <a class="nav-link" href="#contact">Contact</a>
         </nav>
       </section>
     </div>
@@ -231,7 +231,7 @@
           </div>
 
           <div class="col-md-3 text-center text-md-right">
-            <a class="btn btn-lg btn-round btn-light" href="/#contact">Need Help?</a>
+            <a class="btn btn-lg btn-round btn-light" href="#contact">Need Help?</a>
           </div>
         </div>
       </div>
