--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
       <section class="navbar-mobile">
         <nav class="nav nav-navbar ml-auto">
-          <a class="nav-link" href="/">Home</a>
+          <a class="nav-link" href="#home">Home</a>
           <a class="nav-link" href="#services">Services</a>
           <a class="nav-link" href="#blockchain">Blockchain</a>
           <a class="nav-link" href="#cryptocurrency">Cryptocurrency</a>
