--- a/index.html
+++ b/index.html
@@ -50,7 +50,6 @@
           <a class="nav-link" href="#home">Home</a>
           <a class="nav-link" href="#services">Services</a>
           <a class="nav-link" href="#blockchain">Blockchain</a>
-          <a class="nav-link" href="#cryptocurrency">Cryptocurrency</a>
           <a class="nav-link" href="/blog">Blog</a>
           <a class="nav-link" href="#contact">Contact</a>
         </nav>
@@ -106,8 +105,39 @@
               <i class="icon-briefcase lead-7 text-muted"></i>
             </p>
             <h5>Reinvent Business with Blockchain</h5>
-            <p>Blockchain can build applications which were not possible earlier. Let's discuss how blockchain can benefit your
-              business.</p>
+            <p>Let's discuss how blockchain can benefit your business.</p>
+          </div>
+
+          <div class="col-md-6 col-lg-3">
+            <p>
+              <i class="icon-puzzle lead-7 text-muted"></i>
+            </p>
+            <h5>Platforms</h5>
+            <p>APIs for cryptocurrency payments, integrations, we build customized highly scalable fault-tolerant systems.</p>
+          </div>
+
+          <div class="col-md-6 col-lg-3">
+            <p>
+              <i class="icon-anchor lead-7 text-muted"></i>
+            </p>
+            <h5>Stellar Anchors</h5>
+            <p>Connect existing banks to the blockchain or build complete fintech solution.</p>
+          </div>
+
+          <div class="col-md-6 col-lg-3">
+            <p>
+              <i class="ti-exchange-vertical lead-7 text-muted"></i>
+            </p>
+            <h5>Exchanges</h5>
+            <p>Whitelabeled and customizable decentralized cryptocurrency exchange solution.</p>
+          </div>
+
+          <div class="col-md-6 col-lg-3">
+            <p>
+              <i class="icon-wallet lead-7 text-muted"></i>
+            </p>
+            <h5>Wallets</h5>
+            <p>Secure and multi cryptocurrency wallets. Web, Mobile and hardware wallet integrations.</p>
           </div>
 
           <div class="col-md-6 col-lg-3">
@@ -118,7 +148,6 @@
             <p>Android iOS Mobile apps for blockchain applications.</p>
           </div>
 
-
           <div class="col-md-6 col-lg-3">
             <p>
               <i class="icon-laptop lead-7 text-muted"></i>
@@ -127,16 +156,33 @@
             <p>Scalable and high-performance web applications using latest technologies.</p>
           </div>
 
-
           <div class="col-md-6 col-lg-3">
             <p>
-              <i class="icon-puzzle lead-7 text-muted"></i>
+              <i class="icon-hotairballoon lead-7 text-muted"></i>
             </p>
-            <h5>Platforms</h5>
-            <p>Be it SaaS application, APIs for cryptocurrency payments, integrations, we build customized highly scalable fault-tolerant
-              systems.</p>
+            <h5>ICO</h5>
+            <p>Launch an ICO on Stellar for your next project.</p>
           </div>
 
+        </div>
+      </div>
+    </section>
+
+      <!--
+    |‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒
+    | CTA
+    |‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒
+    !-->
+    <section class="section py-7" style="background-color: #8ea6e6">
+      <div class="container">
+        <div class="row gap-y align-items-center">
+          <div class="col-md-9">
+            <h4 class="mb-0 text-white text-center text-md-left">Convert your idea into Reality!</h4>
+          </div>
+
+          <div class="col-md-3 text-center text-md-right">
+            <a class="btn btn-lg btn-round btn-light" href="#contact">Need Help?</a>
+          </div>
         </div>
       </div>
     </section>
@@ -217,79 +263,11 @@
       </div>
     </section>
 
-
-    <!--
-      |‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒
-      | CTA
-      |‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒
-      !-->
-    <section class="section py-7" style="background-color: #8ea6e6">
-      <div class="container">
-        <div class="row gap-y align-items-center">
-          <div class="col-md-9">
-            <h4 class="mb-0 text-white text-center text-md-left">Convert your idea into Reality!</h4>
-          </div>
-
-          <div class="col-md-3 text-center text-md-right">
-            <a class="btn btn-lg btn-round btn-light" href="#contact">Need Help?</a>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!--
-      |‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒
-      | Cryptocurrency
-      |‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒
-      !-->
-    <section id="cryptocurrency" class="section bg-gray">
-      <div class="container">
-        <header class="section-header">
-          <h2>Crypto Currency</h2>
-          <hr>
-          <p class="lead">Secure, scalable and reliable solutions in blockchain technology.</p>
-        </header>
-
-
-        <div class="row gap-y text-center">
-
-          <div class="col-md-6 col-xl-4 feature-1">
-            <p class="feature-icon text-success">
-              <i class="icon-hotairballoon"></i>
-            </p>
-            <h5>ICO</h5>
-            <p>We build Smart Contracts, Anchors and tailored ICO projects on Stellar Network, which is low-cost and faster
-              solution for raising funds.</p>
-          </div>
-
-
-          <div class="col-md-6 col-xl-4 feature-1">
-            <p class="feature-icon text-primary">
-              <i class="icon-wallet"></i>
-            </p>
-            <h5>Wallets</h5>
-            <p>Our mobile app developer experts are best at delivering secure and multi cryptocurrency wallets that provide on the
-              go access to your users on any device with web wallets and hardware wallet integration.
-            </p>
-          </div>
-
-
-          <div class="col-md-6 col-xl-4 feature-1">
-            <p class="feature-icon text-danger">
-              <i class="ti-exchange-vertical"></i>
-            </p>
-            <h5>Exchanges</h5>
-            <p>Whitelabeled and customizable decentralized cryptocurrency exchange solution. Our team focuses on security,
-              scalability and seamless connectivity.</p>
-          </div>
-
-        </div>
-
-      </div>
-    </section>
+    <!-- Portfolio HERE -->
 
 
     <!-- Contact -->
-    <section class="section" id="contact">
+    <section class="section bg-gray" id="contact">
       <div class="container">
 
         <h2 class="text-center">Let's Get In Touch</h2>
