--- a/index.html
+++ b/index.html
@@ -67,8 +67,9 @@
         <div class="col-md-5 mr-auto">
           <h1 class="fw-600">We help build your next blockchain project.</h1>
           <br>
-          <p class="lead-2">We are experienced blockchain developers with years of experience in developing web and mobile applications. Our
-            expertise enables us to develop blockchain based solutions, ICO, cryptocurrency wallets and exchanges.</p>
+          <p class="lead-2">We are experienced blockchain developers with years of experience in developing web and mobile
+            applications. Our expertise enables us to develop blockchain based solutions, ICO, cryptocurrency wallets and
+            exchanges.</p>
           <br>
           <a class="btn btn-xl btn-round btn-info" href="#contact">Let's Work Together</a>
         </div>
@@ -167,8 +168,28 @@
         </div>
       </div>
     </section>
+    <!--
+    |‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒
+    | Tech
+    |‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒
+    !-->
+    <section class="section py-6">
+      <div class="container">
 
-      <!--
+        <div class="partner tech-mm">
+          <img src="assets/img/stellar_logo.png" alt="tech 1">
+          <img src="assets/img/rust_logo.png" alt="tech 2">
+          <img src="assets/img/JavaScript_logo.png" alt="tech 4">
+          <img src="assets/img/eth_logo.png" alt="tech 4">
+          <img src="assets/img/nodejs_logo.png" alt="tech 5">
+          <img src="assets/img/vue_logo.png" alt="tech 6">
+          <img src="assets/img/ts_logo.png" alt="tech 7">
+          <img src="assets/img/nativescript_logo.png" alt="tech 8">
+        </div>
+
+      </div>
+    </section>
+    <!--
     |‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒
     | CTA
     |‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒
@@ -247,7 +268,7 @@
             <h4>Private Blockchain Networks | Cloud</h4>
             <p>
               Private blockchains provide faster and cheaper transactions, you choose to control who can participate in the network. The
-              data remains within the organization and provides decentralization an trust internally. We deliver private
+              data remains within the organization and provides decentralization and trust internally. We deliver private
               blockchain solutions and the necessary is infrastructure to run your application seamlessly. Apart from building
               the projects, Our services provide integration of your platform on the cloud with Azure, AWS experts.
             </p>
@@ -331,22 +352,22 @@
 
     <!-- Thank You Modal -->
     <div class="modal fade" id="modal-thankyou" tabindex="-1" role="dialog">
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-body">
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
-              <div class="text-center">
-                <img width="200px" src="/assets/img/thankyou.png">
-                <h4>Thank You</h4>
-                <p>We will get in touch very soon.</p>
-              </div>
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-body">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+            <div class="text-center">
+              <img width="200px" src="/assets/img/thankyou.png">
+              <h4>Thank You</h4>
+              <p>We will get in touch very soon.</p>
             </div>
-  
           </div>
+
         </div>
       </div>
+    </div>
 
     <!-- Footer -->
     <footer class="footer">
