--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
       <section class="navbar-mobile">
         <nav class="nav nav-navbar ml-auto">
           <a class="nav-link" href="#home">Home</a>
+          <a class="nav-link" href="#technologies">Technologies</a>
           <a class="nav-link" href="#services">Services</a>
-          <a class="nav-link" href="#blockchain">Blockchain</a>
           <a class="nav-link" href="/blog">Blog</a>
           <a class="nav-link" href="#contact">Contact</a>
         </nav>
@@ -65,13 +65,13 @@
       <div class="row align-items-center h-100">
 
         <div class="col-md-5 mr-auto">
-          <h1 class="fw-600">We help build your next blockchain project.</h1>
+          <h1 class="fw-600">Expert Web, Mobile and Backend engineers</h1>
           <br>
-          <p class="lead-2">We are experienced blockchain developers with years of experience in developing web and mobile
-            applications. Our expertise enables us to develop blockchain based solutions, ICO, cryptocurrency wallets and
-            exchanges.</p>
+          <p class="lead-2">We are experienced Nodejs developers with years of experience in developing web and mobile
+            applications. Our expertise enables us to develop high performant, scalable and well structured applications
+            with cloud and latest technologies.</p>
           <br>
-          <a class="btn btn-xl btn-round btn-info" href="#contact">Let's Work Together</a>
+          <a class="btn btn-xl btn-round btn-info" href="#contact">Let's Connect</a>
         </div>
 
 
@@ -89,82 +89,144 @@
   <main class="main-content">
     <!--
       |‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒
-      | What we do
+      | Technologies we work with
       |‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒
       !-->
-    <section class="section bg-gray" id="services">
+    <section class="section bg-gray" id="technologies">
       <div class="container">
         <header class="section-header">
-          <h2>What we do</h2>
+          <h2>Technology Expertise</h2>
           <hr>
-          <!-- <p class="lead">Products we develop as part of the blockchain solutions.</p> -->
+          <p class="lead">Our architects design and develop extendible, high performant and
+            scalable appllications with latest technologies.</p>
         </header>
         <div class="row gap-y text-center">
 
           <div class="col-md-6 col-lg-3">
-            <p>
-              <i class="icon-briefcase lead-7 text-muted"></i>
+            <p class="tech-mm">
+              <img src="assets/img/nodejs_logo.png" alt="Nodejs logo">
             </p>
-            <h5>Reinvent Business with Blockchain</h5>
-            <p>Let's discuss how blockchain can benefit your business.</p>
+            <h5>Nodejs</h5>
+            <p>Fast, scalable and light weight Javascript runtime for backend</p>
           </div>
 
           <div class="col-md-6 col-lg-3">
-            <p>
-              <i class="icon-puzzle lead-7 text-muted"></i>
+            <p class="tech-mm">
+                <img src="assets/img/expressjslogo.png" alt="Expressjs logo">
             </p>
-            <h5>Platforms</h5>
-            <p>APIs for cryptocurrency payments, integrations, we build customized highly scalable fault-tolerant systems.</p>
+            <h5>Expressjs</h5>
+            <p>Robust, fast, flexible and minimul nodejs framework for building APIs, web and mobile applications</p>
           </div>
 
           <div class="col-md-6 col-lg-3">
-            <p>
-              <i class="icon-anchor lead-7 text-muted"></i>
+            <p class="tech-mm">
+              <img src="assets/img/vue_logo.png" alt="Vuejs logo">
             </p>
-            <h5>Stellar Anchors</h5>
-            <p>Connect existing banks to the blockchain or build complete fintech solution.</p>
+            <h5>Vuejs</h5>
+            <p>Progressive Javascript framework for building user interfaces and SPAs</p>
           </div>
 
           <div class="col-md-6 col-lg-3">
-            <p>
-              <i class="ti-exchange-vertical lead-7 text-muted"></i>
+            <p class="tech-mm">
+              <img src="assets/img/nuxtlogo.png" alt="Nuxtjs logo">
             </p>
-            <h5>Exchanges</h5>
-            <p>Whitelabeled and customizable decentralized cryptocurrency exchange solution.</p>
+            <h5>Nuxtjs</h5>
+            <p>Vuejs web application framework for writing SSR, Static and SPAs with modular architecture</p>
           </div>
 
           <div class="col-md-6 col-lg-3">
-            <p>
-              <i class="icon-wallet lead-7 text-muted"></i>
+            <p class="tech-mm">
+              <img src="assets/img/nativescript_logo.png" alt="Nativescript logo">
             </p>
-            <h5>Wallets</h5>
-            <p>Secure and multi cryptocurrency wallets. Web, Mobile and hardware wallet integrations.</p>
+            <h5>Nativescript</h5>
+            <p>Cross platform native mobile app development framework</p>
           </div>
 
           <div class="col-md-6 col-lg-3">
-            <p>
-              <i class="icon-mobile lead-7 text-muted"></i>
+            <p class="tech-mm">
+              <img src="assets/img/socketio.png" alt="Socketio logo">
             </p>
-            <h5>Mobile Apps</h5>
-            <p>Android iOS Mobile apps for blockchain applications.</p>
+            <h5>Socket.io</h5>
+            <p>Javascript library for real-time applications, chat, analytics and bidirectional communication</p>
           </div>
 
           <div class="col-md-6 col-lg-3">
-            <p>
-              <i class="icon-laptop lead-7 text-muted"></i>
+            <p class="tech-mm">
+              <img src="assets/img/mongodb_logo.png" alt="MongoDB logo">
             </p>
-            <h5>Web Apps</h5>
-            <p>Scalable and high-performance web applications using latest technologies.</p>
+            <h5>MongoDB</h5>
+            <p>Object oriented, simple, dynamic and scalable NoSQL database.</p>
           </div>
 
           <div class="col-md-6 col-lg-3">
-            <p>
-              <i class="icon-hotairballoon lead-7 text-muted"></i>
+            <p class="tech-mm">
+                <img src="assets/img/mongoose_logo.png" alt="Mongoosejs logo">
             </p>
-            <h5>ICO</h5>
-            <p>Launch an ICO on Stellar for your next project.</p>
+            <h5>Mongoose</h5>
+            <p>Object Data Modeling library for MongoDB, we write extendible database design use Mongoose</p>
           </div>
 
+          <div class="col-md-6 col-lg-3">
+            <p class="tech-mm">
+              <img src="assets/img/electron_logo.png" alt="Electron logo">
+            </p>
+            <h5>Electron</h5>
+            <p>Cross platform desktop application framework</p>
+          </div>
+
+          <div class="col-md-6 col-lg-3">
+            <p class="tech-mm">
+              <img src="assets/img/redis_logo.png" alt="Redis logo">
+            </p>
+            <h5>Redis</h5>
+            <p>In memory cache, we write high performant applications using Redis integration</p>
+          </div>
+
+          <div class="col-md-6 col-lg-3">
+            <p class="tech-mm">
+                <img src="assets/img/rabbitmq_logo.png" alt="RabbitMQ logo">
+            </p>
+            <h5>RabbitMQ/AWS SQS/Azure Service BUS</h5>
+            <p>Message broker and queuing system for high scalability</p>
+          </div>
+
+          <div class="col-md-6 col-lg-3">
+            <p class="tech-mm">
+                <img src="assets/img/jenkins_logo.png" alt="Jenkins logo">
+            </p>
+            <h5>CI/CD Pipelines</h5>
+            <p>Continus delivery using CI/CD tools like Jenkins and other managed services</p>
+          </div>
+
+          <div class="col-md-6 col-lg-3">
+            <p class="tech-mm">
+              <img src="assets/img/kubernetes_logo.png" alt="Kubernetes logo">
+            </p>
+            <h5>Docker & Kubernetes</h5>
+            <p>Containerised applications for faster delivery, scale limitless with Kubernetes</p>
+          </div>
+
+          <div class="col-md-6 col-lg-3">
+              <p class="tech-mm">
+                <img src="assets/img/aws_logo.png" alt="AWS logo">
+            </p>
+            <h5>Cloud</h5>
+            <p>We have expertise with all major cloud platforms including but not limited to AWS, Azure, Digital Ocean</p>
+          </div>
+          <div class="col-md-6 col-lg-3">
+              <p class="tech-mm">
+                <img src="assets/img/blockchain_logo.png" alt="Blockchain logo">
+            </p>
+            <h5>Blockchain</h5>
+            <p>We develop custom blockchain solutions from scratch as per the client requirements</p>
+          </div>
+          <div class="col-md-6 col-lg-3">
+            <p class="tech-mm">
+                <img src="assets/img/iot_logo.png" alt="IOT logo">
+            </p>
+            <h5>MQTT/IOT</h5>
+            <p>We have developed custom solutions for IOT with latest cloud and IOT technologies</p>
+          </div>
         </div>
       </div>
     </section>
@@ -173,7 +235,7 @@
     | Tech
     |‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒
     !-->
-    <section class="section py-6">
+    <!-- <section class="section py-6">
       <div class="container">
 
         <div class="partner tech-mm">
@@ -188,7 +250,7 @@
         </div>
 
       </div>
-    </section>
+    </section> -->
     <!--
     |‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒
     | CTA
@@ -202,7 +264,7 @@
           </div>
 
           <div class="col-md-3 text-center text-md-right">
-            <a class="btn btn-lg btn-round btn-light" href="#contact">Need Help?</a>
+            <a class="btn btn-lg btn-round btn-light" href="#contact">Let's Connect</a>
           </div>
         </div>
       </div>
@@ -213,29 +275,28 @@
       | Solution
       |‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒
       !-->
-    <section id="blockchain" class="section">
+    <section id="services" class="section">
       <div class="container">
         <header class="section-header">
           <small>Solution</small>
-          <h2>Blockchain</h2>
+          <h2>Services</h2>
           <hr>
-          <p class="lead">We have specialization in building custom and private decentralized applications.</p>
+          <p class="lead">We implement ceative solutions for you</p>
         </header>
 
 
         <div class="row gap-y align-items-center">
           <div class="col-md-6 ml-auto">
-            <h4>Stellar</h4>
-            <p>Blockchain solution that is faster, cheaper and secure. Stellar smart contracts are suitable for most of the
-              applications on blockchain from remittance, payment mobile apps, and ICOs. Integration with the existing banking
-              solutions to send or receive any cryptocurrency for your users without modifying existing infrastructure. Become
-              an Anchor and launch your own assets on Stellar blockchain with ease.
+            <h4>Mobile Development</h4>
+            <p> Reduce development time and maintenance with native cross platform mobile apps built with Nativescript.
+              Performance and UX are key factors in mobile apps which users love. We would love to help build your mobile products.
+
             </p>
-            <a class="btn btn-round bg-gradient-primary text-white" href="#contact">Know more</a>
+            <a class="btn btn-round bg-gradient-primary text-white" href="#contact">Let's Get in Touch</a>
           </div>
 
           <div class="col-md-5 order-md-first text-center">
-            <img width="250px" src="assets/img/stellar-rocket.png" alt="...">
+              <i class="icon-mobile service-icon text-muted"></i>
           </div>
         </div>
 
@@ -245,17 +306,16 @@
 
         <div class="row gap-y align-items-center">
           <div class="col-md-6 mr-auto">
-            <h4>Ethereum</h4>
-            <p>Launch an ICO using your own ERC20 token on Ethereum or build a complete project, Ethereum is what you need.
-              We have expert coders in Solidity - the Turing complete smart contract language of Ethereum. We write smart
-              contracts and deploy your project on private Ethereum network as required for enterprise solutions and governments.
-              Our experts in cloud and data storage know exactly what fits well with your project.
+            <h4>Web Development</h4>
+            <p>
+              Modular web applications with Vuejs, Nodejs, MongoDB and all the tools to scale your product limitless.
+              We carefully analyse your idea and implement it with extendability in mind.
             </p>
-            <a class="btn btn-round bg-gradient-dark text-white" href="#contact">Know more</a>
+            <a class="btn btn-round bg-gradient-dark text-white" href="#contact">Let's Get in Touch</a>
           </div>
 
           <div class="col-md-5 text-center">
-            <img src="assets/img/ethereum.png" alt="...">
+              <i class="icon-laptop service-icon text-muted"></i>
           </div>
         </div>
 
@@ -265,18 +325,17 @@
 
         <div class="row gap-y align-items-center">
           <div class="col-md-6 ml-auto">
-            <h4>Private Blockchain Networks | Cloud</h4>
+            <h4>Backend and API development</h4>
             <p>
-              Private blockchains provide faster and cheaper transactions, you choose to control who can participate in the network. The
-              data remains within the organization and provides decentralization and trust internally. We deliver private
-              blockchain solutions and the necessary is infrastructure to run your application seamlessly. Apart from building
-              the projects, Our services provide integration of your platform on the cloud with Azure, AWS experts.
+              Nodejs and Express are the new standard for exterprises and startups. We develop APIs and backend for 
+              applications including but not limited to Chat, Realtime applications, SAAS platforms, which scales
+              limitless. Also documentation is a key factor in API development hence we follow standard OpenAPI Specification.
             </p>
             <a class="btn btn-round bg-gradient-info text-white" href="#contact">Know more</a>
           </div>
 
           <div class="col-md-5 order-md-first text-center">
-            <img width="250px" src="assets/img/cloud_blockchain.png" alt="...">
+              <i class="icon-gears service-icon text-muted"></i>
           </div>
         </div>
 
