--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="keywords" content="">
+  <meta name="description" content="We are experienced Nodejs developers with years of experience in developing web and mobile
+  applications. Our expertise enables us to develop high performant, scalable and well structured applications
+  with cloud and latest technologies">
+  <meta name="keywords" content="nodejs,vuejs,mongodb,redis,development,api,saas,blockchain,nuxt,nativescript,expressjs,app development,web app">
 
-  <title>Eilarc - Blockchain Solutions</title>
+  <title>Eilarc - Nodejs, Vuejs Scalable Applications Development</title>
 
   <!-- Styles -->
   <link href="assets/css/page.min.css" rel="stylesheet">
@@ -23,8 +25,10 @@
   <meta name="theme-color" content="#ffffff">
 
   <!--  Open Graph Tags -->
-  <meta property="og:title" content="Eilarc - Blockchain Solutions">
-  <meta property="og:description" content="Transform your business with blockchain technology, we can help determine how blockchain can revolutionise  your business.">
+  <meta property="og:title" content="Eilarc - Nodejs, Vuejs Scalable Applications Development">
+  <meta property="og:description" content="We are experienced Nodejs developers with years of experience in developing web and mobile
+  applications. Our expertise enables us to develop high performant, scalable and well structured applications
+  with cloud and latest technologies">
   <meta property="og:url" content="https://eilarc.io">
   <meta property="og:image" content="https://eilarc.io/assets/img/og-image.jpg">
   <meta name="twitter:card" content="summary_large_image">
