--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   with cloud and latest technologies">
   <meta name="keywords" content="nodejs,vuejs,mongodb,redis,development,api,saas,blockchain,nuxt,nativescript,expressjs,app development,web app">
 
-  <title>Eilarc - Nodejs, Vuejs Scalable Applications Development</title>
+  <title>Eilarc - Nodejs, Vuejs, MongoDB Scalable Applications Development</title>
 
   <!-- Styles -->
   <link href="assets/css/page.min.css" rel="stylesheet">
@@ -25,7 +25,7 @@
   <meta name="theme-color" content="#ffffff">
 
   <!--  Open Graph Tags -->
-  <meta property="og:title" content="Eilarc - Nodejs, Vuejs Scalable Applications Development">
+  <meta property="og:title" content="Eilarc - Nodejs, Vuejs, MongoDB Scalable Applications Development">
   <meta property="og:description" content="We are experienced Nodejs developers with years of experience in developing web and mobile
   applications. Our expertise enables us to develop high performant, scalable and well structured applications
   with cloud and latest technologies">
