--- a/index.html
+++ b/index.html
@@ -239,22 +239,23 @@
     | Tech
     |‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒
     !-->
-    <!-- <section class="section py-6">
+    <section class="section py-6">
       <div class="container">
 
-        <div class="partner tech-mm">
-          <img src="assets/img/stellar_logo.png" alt="tech 1">
+        <div class="partner tech-sm">
+          <img src="assets/img/stellar_new_logo.png" alt="tech 1">
           <img src="assets/img/rust_logo.png" alt="tech 2">
           <img src="assets/img/JavaScript_logo.png" alt="tech 4">
           <img src="assets/img/eth_logo.png" alt="tech 4">
-          <img src="assets/img/nodejs_logo.png" alt="tech 5">
-          <img src="assets/img/vue_logo.png" alt="tech 6">
+          <img src="assets/img/gulp_logo.png" alt="tech 5">
+          <img src="assets/img/npm_logo.png" alt="tech 6">
           <img src="assets/img/ts_logo.png" alt="tech 7">
-          <img src="assets/img/nativescript_logo.png" alt="tech 8">
+          <img src="assets/img/chai_mocha_logo.png" alt="tech 8">
+          <img src="assets/img/hyperledger_logo.png" alt="tech 8">
         </div>
 
       </div>
-    </section> -->
+    </section>
     <!--
     |‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒
     | CTA
