--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   applications. Our expertise enables us to develop high performant, scalable and well structured applications
   with cloud and latest technologies">
   <meta property="og:url" content="https://eilarc.io">
-  <meta property="og:image" content="https://eilarc.io/assets/img/og-image.jpg">
+  <meta property="og:image" content="https://eilarc.io/assets/img/og-image.png">
   <meta name="twitter:card" content="summary_large_image">
 </head>
 
