--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
           <small>Solution</small>
           <h2>Services</h2>
           <hr>
-          <p class="lead">We implement ceative solutions for you</p>
+          <p class="lead">We implement creative solutions for you</p>
         </header>
 
 
