--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
 
           <div class="col-lg-5 ml-auto text-center text-lg-left">
             <hr class="d-lg-none">
-            <h5>Bengaluru, India</h5>
+            <!-- <h5>Bengaluru, India</h5> -->
             <p class="social">hello@eilarc.io
               <a href="mailto:hello@eilarc.io">
                 <i class="fa fa-envelope"></i>
