--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <a class="nav-link" href="#technologies">Technologies</a>
           <a class="nav-link" href="#portfolio">Portfolio</a>
           <a class="nav-link" href="#contact">Contact</a>
-          <a class="nav-link" href="/blog">Blog</a>
+          <!-- <a class="nav-link" href="/blog">Blog</a> -->
         </nav>
       </section>
     </div>
@@ -212,7 +212,7 @@
           <div class="col-md-5 mr-auto text-center text-md-left">
             <p class="lead-9 fw-900 lh-1 opacity-10">02</p>
             <h3>We create a requirement document</h3>
-            <p>Understanding you product is very important for us, so we can deliver what you exactly need. The requirement document helps you and us to form a consensus of our understanding and what is required to be built.</p>
+            <p>Understanding your product is very important for us, so we can deliver what you exactly need. The requirement document helps you and us to form a consensus of our understanding and what is required to be built.</p>
           </div>
 
           <div class="col-md-6 text-center order-first order-md-last">
@@ -304,7 +304,7 @@
       </div>
     </section>
 
-<!--
+    <!--
       |‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒
       | Technologies we work with
       |‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒‒
@@ -383,13 +383,13 @@
             <p>Object oriented, simple, dynamic and scalable NoSQL database.</p>
           </div>
 
-          <div class="col-md-6 col-lg-3">
+          <!-- <div class="col-md-6 col-lg-3">
             <p class="tech-mm">
               <img src="assets/img/nativescript_logo.png" alt="Nativescript logo">
             </p>
             <h5>Nativescript</h5>
             <p>Cross platform native mobile app development framework</p>
-          </div>
+          </div> -->
 
           <div class="col-md-6 col-lg-3">
             <p class="tech-mm">
@@ -404,7 +404,7 @@
               <img src="assets/img/redis_logo.png" alt="Redis logo">
             </p>
             <h5>Redis</h5>
-            <p>In memory cache, we write high performant applications using Redis integration</p>
+            <p>In memory cache, we write high performance applications using Redis integration</p>
           </div>
 
           <div class="col-md-6 col-lg-3">
@@ -488,7 +488,6 @@
           <img src="assets/img/npm_logo.png" alt="tech 6">
           <img src="assets/img/ts_logo.png" alt="tech 7">
           <img src="assets/img/chai_mocha_logo.png" alt="tech 8">
-          <img src="assets/img/hyperledger_logo.png" alt="tech 8">
         </div>
 
       </div>
@@ -682,7 +681,7 @@
 
           <div class="col-lg-6">
             <div class="nav nav-bold nav-uppercase nav-trim justify-content-lg-center">
-              <a class="nav-link" href="/blog">Blog</a>
+              <!-- <a class="nav-link" href="/blog">Blog</a> -->
               <a class="nav-link" href="/privacy">Privacy</a>
               <!-- <a class="nav-link" href="#">Contact</a> -->
             </div>
