--- a/index.html
+++ b/index.html
@@ -4,12 +4,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="We are experienced Nodejs developers with years of experience in developing web and mobile
-  applications. Our expertise enables us to develop high performant, scalable and well structured applications
-  with cloud and latest technologies">
-  <meta name="keywords" content="nodejs,vuejs,mongodb,redis,development,api,saas,blockchain,nuxt,nativescript,expressjs,app development,web app">
+  <meta name="description" content="We are a software development company providing mobile and web development, SaaS Platforms, Fintech Apps, DevOps services and analytics platforms">
+  <meta name="keywords" content="Software Development, software company, SaaS Platform, Fintech Platforms, remittance application, DevOps">
 
-  <title>Eilarc - Nodejs, Vuejs, MongoDB Scalable Applications Development</title>
+  <title>Eilarc - Software Development Company - SaaS Platforms - Mobile and Web Apps</title>
 
   <!-- Styles -->
   <link href="assets/css/page.min.css" rel="stylesheet">
@@ -25,13 +23,16 @@
   <meta name="theme-color" content="#ffffff">
 
   <!--  Open Graph Tags -->
-  <meta property="og:title" content="Eilarc - Nodejs, Vuejs, MongoDB Scalable Applications Development">
-  <meta property="og:description" content="We are experienced Nodejs developers with years of experience in developing web and mobile
-  applications. Our expertise enables us to develop high performant, scalable and well structured applications
-  with cloud and latest technologies">
+  <meta property="og:title" content="Eilarc - Software Development Company - SaaS Platforms - Mobile and Web Apps">
+  <meta property="og:description" content="We are a software development company providing mobile and web development, SaaS Platforms, Fintech Apps, DevOps services and analytics platforms">
   <meta property="og:url" content="https://eilarc.io">
   <meta property="og:image" content="https://eilarc.io/assets/img/og-image.png">
   <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:description" content="We are a software development company providing mobile and web development, SaaS Platforms, Fintech Apps, DevOps services and analytics platforms" />
+  <meta name="twitter:title" content="Eilarc - Software Development Company - SaaS Platforms - Mobile and Web Apps" />
+  <meta name="twitter:site" content="https://eilarc.io" />
+  <meta name="twitter:image" content="https://eilarc.io/assets/img/og-image.png" />
+  <meta name="twitter:creator" content="@eilarcio" />
 </head>
 
 <body>
